Create OpenAPI & Swagger Docs (#56)